--- a/FEproblem1/src/app/search/search.component.html
+++ b/FEproblem1/src/app/search/search.component.html
@@ -44,7 +44,7 @@
            [(ngModel)]="vehicle1"
            required
            formControlName="selectedVehicle1"
-           (change)="calculateTimeTaken(1)"
+           (change)="onSelectingVehicle(1)"
            >
            <mat-radio-button class="example-radio-button" radioGroup="Vehicle1" *ngFor="let vehicle of filteredVehicles1 | async" [value]="vehicle" >
              {{vehicle.name}}
@@ -93,7 +93,7 @@
            [(ngModel)]="vehicle2"
            formControlName="selectedVehicle2"
            required
-           (change)="calculateTimeTaken(2)">
+           (change)="onSelectingVehicle(2)">
            <mat-radio-button class="example-radio-button" radioGroup="Vehicle2" *ngFor="let vehicle of filteredVehicles2 | async" [value]="vehicle" >
              {{vehicle.name}}
            </mat-radio-button>
@@ -141,7 +141,7 @@
            class="example-radio-group"
            [(ngModel)]="vehicle3"
            formControlName="selectedVehicle3"
-           (change)="calculateTimeTaken(3)">
+           (change)="onSelectingVehicle(3)">
            <mat-radio-button class="example-radio-button" radioGroup="Vehicle3" *ngFor="let vehicle of filteredVehicles3 | async" [value]="vehicle" >
              {{vehicle.name}}
            </mat-radio-button>
@@ -191,7 +191,7 @@
            [(ngModel)]="vehicle4"
            required
            formControlName="selectedVehicle4"
-           (change)="calculateTimeTaken(4)">
+           (change)="onSelectingVehicle(4)">
            <mat-radio-button class="example-radio-button" radioGroup="Vehicle" *ngFor="let vehicle of filteredVehicles4 | async" [value]="vehicle" >
              {{vehicle.name}}
            </mat-radio-button>
