navigation, header, footer added

--- a/FEproblem1/src/styles.sass
+++ b/FEproblem1/src/styles.sass
@@ -18,7 +18,10 @@ h2, h3
 	font-family: $primary-font-family 
 	font-weight: lighter 
 body 
-	margin: 2em 
+	top: 0
+	bottom: 0
+	left: 0
+	right: 0
 body, input[type="text"], button 
 	color: $teriary-color 
 	font-family: $secondary-font-family
