--- a/FEproblem1/src/app/app.component.html
+++ b/FEproblem1/src/app/app.component.html
@@ -1,5 +1,3 @@
-  <app-falcon-dashboard></app-falcon-dashboard>
+ <app-navigation></app-navigation>
   <router-outlet></router-outlet>
 
-
-<app-app-footer></app-app-footer>
