--- a/FEproblem1/src/app/navigation/navigation.component.css
+++ b/FEproblem1/src/app/navigation/navigation.component.css
@@ -1,6 +1,5 @@
 .sidenav-container {
-  height: 100%;
-  width: 100%;
+  flex: 1;
 }
 
 .sidenav {
@@ -9,15 +8,24 @@
 
 .sidenav .mat-toolbar {
   background: inherit;
+   z-index: 2;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .mat-sidenav-content{
 	width: inherit;
+    flex: 1;
+}
 
+.sidenav.appname{
+	 margin-left: 8px;
 }
