--- a/FEproblem1/src/app/navigation/navigation.component.html
+++ b/FEproblem1/src/app/navigation/navigation.component.html
@@ -1,31 +1,32 @@
 <mat-sidenav-container class="sidenav-container">
-  <!--<mat-sidenav #drawer class="sidenav" fixedInViewport
+  <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#">Home</a>
-      <a mat-list-item href="#">Reset</a>
-      <a mat-list-item href="#">Link 3</a>-->
-   <!-- </mat-nav-list>
-  </mat-sidenav>-->
+      <a mat-list-item href="https://www.geektrust.in/">Geektrust Home</a>
+   </mat-nav-list>
+  </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <!--<button
+      <h1 class="appname">Finding Falcone!</h1>
+      <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>-->
-      <span>FEproblem1</span>
-      <button type="">Reset</button>
-      <button type="">Home</button>
+        <mat-icon aria-label="Side nav toggle icon">menu
+        </mat-icon>
+      </button>
+    
+
     </mat-toolbar>
     <!-- Add Content Here -->
 
-      <!--<app-falcon-dashboard></app-falcon-dashboard>-->
+      <app-falcon-dashboard></app-falcon-dashboard>
+      <app-app-footer></app-app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
