--- a/FEproblem1/src/app/finding-falcone/navigation/navigation.component.html
+++ b/FEproblem1/src/app/finding-falcone/navigation/navigation.component.html
@@ -1,17 +1,14 @@
-<div class="example-container">
 <mat-sidenav-container class="sidenav-container">
-  
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="findingfalcone">Home</a>
+      <a mat-list-item routerLink="findingfalcone/dashboard">Home</a>
       <a mat-list-item href="https://www.geektrust.in/">Geektrust Home</a>
-   </mat-nav-list>
+    </mat-nav-list>
   </mat-sidenav>
-
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button
@@ -20,18 +17,12 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu
-        </mat-icon>
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-    
       <span>Finding Falcone!</span>
-
     </mat-toolbar>
     <!-- Add Content Here -->
+    <app-falcone-dashboard></app-falcone-dashboard>
 
-      <!--<app-falcon-dashboard></app-falcon-dashboard>-->
-     
   </mat-sidenav-content>
 </mat-sidenav-container>
-</div>
-
