--- a/FEproblem1/src/app/navigation/navigation.component.css
+++ b/FEproblem1/src/app/navigation/navigation.component.css
@@ -22,10 +22,22 @@
 }
 
 .mat-sidenav-content{
-	width: inherit;
-    flex: 1;
+	display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: cente
+
 }
 
 .sidenav.appname{
 	 margin-left: 8px;
+}
+
+.example-container {
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
