--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -1,17 +1,29 @@
+<mat-sidenav-container class="sidenav-container">
+<!--<mat-sidenav #drawer class="sidenav" fixedInViewport
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'"
+      [opened]="(isHandset$ | async) === false">
+    <mat-toolbar>Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/navigation">Home</a>
+      <a mat-list-item href="https://www.geektrust.in/">Geektrust Home</a>
+    </mat-nav-list>
+  </mat-sidenav>-->
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+     <!-- <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>-->
+      <span>
+      Finding Falcone!</span>
+    </mat-toolbar>
+    <!-- Add Content Here -->
+    <!--<app-falcone-dashboard ></app-falcone-dashboard>-->
 
-<img src="../../assets/img/logo.png" alt="logo1">
-<!--<img src="../../assets/img/favicon.png" alt="logo2">-->
-<h1>{{welcomeMessage}}</h1>
-
-<!--<nav>
-		 <a routerLink="/dashboard">Dashboard </a>
-         <a routerLink="">Contact </a>
-</nav>-->
-
-<section>
-	<div class="example-button-row">
-	    	<button mat-button color="primary">Dashboard</button>
-        	<button mat-button>Contact</button>
-    </div>
-</section>
-	
+  </mat-sidenav-content>
+</mat-sidenav-container>
