--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
@@ -11,16 +11,12 @@
         </mat-card-header>
         <mat-card-content class="dashboard-card-content" [ngSwitch]="card.id">
           <div *ngSwitchCase="1">
-                <app-search></app-search>
+                <app-search  (result)="addItem($event)">
+                  
+                </app-search>
               
           </div>
-          <div *ngSwitchCase="2">
-            
-          </div>
-          
-          <div *ngSwitchDefault>
-            
-          </div>
+         
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
