--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -21,6 +21,11 @@
       </button>-->
       <span>
       Finding Falcone!</span>
+
+       <span class="example-spacer"></span>
+        
+      <button mat-flat-button color="primary"><mat-icon>home</mat-icon> Home</button>
+      <a mat-flat-button color="primary" href="https://www.geektrust.in/" target="_blank">Geektrust Home</a>
     </mat-toolbar>
     <!-- Add Content Here -->
     <!--<app-falcone-dashboard ></app-falcone-dashboard>-->
