--- a/FEproblem1/src/app/app-header/app-header.component.sass
+++ b/FEproblem1/src/app/app-header/app-header.component.sass
@@ -40,6 +40,10 @@ example-lable
 	margin-left: 8px
 	min-width: 120px
 
+.example-spacer 
+	flex: 1 1 auto 
+
+
 example-button-row
 	display: $secondary-display
 	width: 490px
