--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
@@ -6,7 +6,7 @@
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
-            
+            {{card.title}}
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content" [ngSwitch]="card.id">
