--- a/FEproblem1/src/app/finding-falcone/result/result.component.css
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.css
@@ -1,27 +1,21 @@
-.full-width {
-  width: 100%;
+.grid-container {
+  margin: 10px;
 }
 
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
+.dashboard-card {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
 }
 
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
+.more-button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.col {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.col:last-child {
-  margin-right: 0;
+.dashboard-card-content {
+  text-align: center;
 }
