--- a/FEproblem1/src/app/finding-falcone/result/result.component.css
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.css
@@ -19,3 +19,10 @@
 .dashboard-card-content {
   text-align: center;
 }
+
+.card-actions
+{
+  align-content: center;
+  flex-wrap: wrap;
+  display: flex;
+}
