--- a/FEproblem1/src/app/finding-falcone/result/result.component.html
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.html
@@ -25,7 +25,7 @@
           </div>
          
         </mat-card-content>
-        <mat-card-actions>
+        <mat-card-actions class="card-actions">
      <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
   </mat-card-actions>
       </mat-card>
@@ -45,7 +45,7 @@
          
         </mat-card-content>
 
-        <mat-card-actions>
+        <mat-card-actions class="card-actions">
      <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
   </mat-card-actions>
       </mat-card>
@@ -65,10 +65,14 @@
          
         </mat-card-content>
 
-        <mat-card-actions>
+        <mat-card-actions class="card-actions">
      <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
   </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+<!--
+<div  class="card-actions">
+  <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
+</div>-->
 </div>
