--- a/FEproblem1/src/app/finding-falcone/search/search.component.html
+++ b/FEproblem1/src/app/finding-falcone/search/search.component.html
@@ -1,4 +1,8 @@
 <form [formGroup]="searchForm" #Searchform>
+
+<mat-card *ngIf="this.error.show">{{this.error.errorMessage}}</mat-card>
+
+
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title >Time Taken: {{timeTaken}}</mat-card-title>
@@ -36,7 +40,7 @@
 
 
         <div class="col" [hidden]="showVehicle1">
-          <mat-label>Select Vehicle 1</mat-label>
+          <mat-label>Select Vehicle 1*</mat-label>
           <mat-radio-group
            #Vehicle1="matRadioGroup"
            aria-labelledby="example-radio-group-label"
@@ -86,7 +90,7 @@
 
 
         <div class="col" [hidden]="showVehicle2">
-           <mat-label>Select Vehicle 2</mat-label>
+           <mat-label>Select Vehicle 2*</mat-label>
           <mat-radio-group
           #Vehicle2="matRadioGroup"
            aria-labelledby="example-radio-group-label"
@@ -135,7 +139,7 @@
 
 
         <div class="col" [hidden]="showVehicle3">
-          <mat-label>Select Vehicle 3</mat-label>
+          <mat-label>Select Vehicle 3*</mat-label>
           <mat-radio-group
           #Vehicle3="matRadioGroup"
            aria-labelledby="example-radio-group-label"
@@ -186,7 +190,7 @@
 
 
         <div class="col" [hidden]="showVehicle4">
-          <mat-label>Select Vehicle 4</mat-label>
+          <mat-label>Select Vehicle 4*</mat-label>
           <mat-radio-group
           #Vehicle4="matRadioGroup"
            aria-labelledby="example-radio-group-label"
