--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
@@ -11,7 +11,7 @@
         </mat-card-header>
         <mat-card-content class="dashboard-card-content" [ngSwitch]="card.id">
           <div *ngSwitchCase="1">
-               
+               <app-search></app-search>
               
           </div>
          
