--- a/FEproblem1/src/app/finding-falcone/result/result.component.html
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.html
@@ -26,7 +26,7 @@
          
         </mat-card-content>
         <mat-card-actions class="card-actions">
-     <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
+     <button mat-flat-button color="primary" routerLink="/">Start Again</button>
   </mat-card-actions>
       </mat-card>
 
@@ -46,7 +46,7 @@
         </mat-card-content>
 
         <mat-card-actions class="card-actions">
-     <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
+     <button mat-flat-button color="primary" routerLink="/">Start Again</button>
   </mat-card-actions>
       </mat-card>
 
@@ -66,7 +66,7 @@
         </mat-card-content>
 
         <mat-card-actions class="card-actions">
-     <button mat-flat-button color="primary" routerLink="/navigation">Start Again</button>
+     <button mat-flat-button color="primary" routerLink="/">Start Again</button>
   </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
