header component unit testing

--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -20,7 +20,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>-->
       <span>
-      Finding Falcone!</span>
+      {{title}}</span>
 
        <span class="example-spacer"></span>
         
