--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -19,8 +19,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>-->
-      <span>
-      {{title}}</span>
+      <span>{{title}}</span>
 
        <span class="example-spacer"></span>
         
