pagenotfound component unit testing

--- a/FEproblem1/src/app/page-not-found/page-not-found.component.html
+++ b/FEproblem1/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <form >
 
-  Sorry. This page does not exist.
+  <span>{{errorMessage}}</span>
 
-   <a mat-flat-button color="primary" routerLink="/">Go to Home Page.</a>
+   <a mat-flat-button color="primary" routerLink="/navigation">Go to Home Page.</a>
 
 </form>
