page not found design

--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -23,7 +23,7 @@
 
        <span class="example-spacer"></span>
         
-      <button mat-flat-button color="primary" routerLink="navigation"><mat-icon>home</mat-icon> Home</button>
+      <button mat-flat-button color="primary" routerLink="/"><mat-icon>home</mat-icon> Home</button>
       <a mat-flat-button color="primary" href="https://www.geektrust.in/" target="_blank">Geektrust Home</a>
     </mat-toolbar>
     <!-- Add Content Here -->
