footer design change

--- a/FEproblem1/src/app/app-footer/app-footer.component.html
+++ b/FEproblem1/src/app/app-footer/app-footer.component.html
@@ -1,3 +1,20 @@
-<footer>
-{{copyRight}}	
-</footer>
+
+<div class="footer">
+  <div class="footer__link">
+
+    <a class="footer__link-item" [href]="">About Us</a>
+    <a class="footer__link-item" [href]="">Blog</a>
+  </div>
+  <div class="footer__icon">
+  	<span class="footer__link-item">{{copyRight}}</span>
+    <button mat-mini-fab>
+      <mat-icon fontSet="fa fa-fs" fontIcon="fa-facebook-square"></mat-icon>
+    </button>
+    <button mat-mini-fab>
+      <mat-icon fontSet="fa fa-fs" fontIcon="fa-twitter-square"></mat-icon>
+    </button>
+    <button mat-mini-fab>
+      <mat-icon fontSet="fa fa-fs" fontIcon="fa-github-square"></mat-icon>
+    </button>
+  </div>
+</div>
