--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -1,33 +1,21 @@
- <mat-sidenav-container class="sidenav-container">
- <!-- <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-  <mat-nav-list>
-      <a mat-list-item routerLink="/navigation">Home</a>
-      <a mat-list-item href="https://www.geektrust.in/">Geektrust Home</a>
-    </mat-nav-list>
-  </mat-sidenav>-->
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <!--<button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>-->
-      <span>{{title}}</span>
 
-       <span class="example-spacer"></span>
-        
-      <button mat-flat-button color="primary" routerLink="/"><mat-icon>home</mat-icon> Home</button>
-      <a mat-flat-button color="primary" href="https://www.geektrust.in/" target="_blank">Geektrust Home</a>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <!--<app-falcone-dashboard ></app-falcone-dashboard>-->
 
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-toolbar class="header">
+
+  <div class="header__title">
+   
+    <h6 class="header__title-text">{{title}}</h6>
+  </div>
+
+  <div class="header-toolbar">
+  <button mat-flat-button class="user-button" routerLink="/">  
+  <mat-icon class="user-button__icon" >home</mat-icon>Home</button>
+
+  <button mat-button class="user-button" mat-flat-button >
+  Geektrust Home
+</button>
+    
+      <!--<a mat-flat-button color="primary" href="https://www.geektrust.in/" target="_blank">Geektrust Home</a>-->
+  </div>
+
+</mat-toolbar>
