--- a/FEproblem1/src/app/finding-falcone/navigation/navigation.component.html
+++ b/FEproblem1/src/app/finding-falcone/navigation/navigation.component.html
@@ -1,29 +1,31 @@
-<!-- <mat-sidenav-container class="sidenav-container">
- <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="/navigation">Home</a>
-      <a mat-list-item href="https://www.geektrust.in/">Geektrust Home</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-     <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>-->
-     <!--  <span>
-      Finding Falcone!</span>
-    </mat-toolbar>-->
-    <!-- Add Content Here -->
-    <app-falcone-dashboard ></app-falcone-dashboard>
+<!--<mat-sidenav-container class="layout">
+  <mat-sidenav
+    #sidenav
+    mode="side"
+    [(opened)]="isShowSidebar"
+    class="layout-sidebar"
+    [mode]="mobileQuery.matches ? 'over' : 'side'"
+    [fixedInViewport]="mobileQuery.matches"
+  >
 
+  <mat-list>
+  <mat-list-item routerLink="/" routerLinkActive="active">
+    <mat-icon>home</mat-icon> Dashboard
+  </mat-list-item>
+  <mat-list-item routerLink="/" routerLinkActive="active">
+    <mat-icon>home</mat-icon> Geek trust Home
+  </mat-list-item>
+</mat-list>
+  </mat-sidenav>
+
+
+
+
+  <mat-sidenav-content class="layout-content">-->
+     <app-falcone-dashboard ></app-falcone-dashboard>
   <!--</mat-sidenav-content>
+
 </mat-sidenav-container>-->
+
+
+
