--- a/FEproblem1/src/app/page-not-found/page-not-found.component.html
+++ b/FEproblem1/src/app/page-not-found/page-not-found.component.html
@@ -1,12 +1,9 @@
 <div class="not-found-page">
   <div class="not-found-page__content">
-    <div class="not-found-page__title">
-      <img class="not-found-page__title-img" src="./assets/img/logo.svg" alt="logo">
-      <h3 class="not-found-page__title-text">Finding Falcone</h3>
-    </div>
+      
 
     <mat-card class="not-found-page__card">
-      <mat-card-content class="not-found-page__content">
+      <mat-card-content >
         <h1 class="not-found-page__card-title">404</h1>
 
         <p class="not-found-page__card-sub-title">Oops. Looks like the page you're looking for no longer exists</p>
