--- a/FEproblem1/src/app/finding-falcone/result/result.component.html
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.html
@@ -17,8 +17,8 @@
         
         <mat-card-content class="result-page__card-content" >
           <div >
-             <p>Success. Congratulations on Finding Falcone. King Shan is mighty pleased.</p>
-              <p >
+             <p class="result-page__card-sub-title">Success. Congratulations on Finding Falcone. King Shan is mighty pleased.</p>
+              <p class="result-page__card-sub-title-second">
                 Planet:	{{planetName}}
               </p>
                <p>
@@ -41,7 +41,7 @@
 
         <mat-card-content class="result-page__card-content" >
           <div >
-            <p>  Better Luck Next Time!!!</p>
+            <p class="result-page__card-sub-title">  Better Luck Next Time!!!</p>
               
           </div>
          
@@ -59,7 +59,7 @@
           </h1>
         <mat-card-content class="result-page__card-content">
           <div >
-             <p> {{error}}</p>
+             <p class="result-page__card-sub-title"> {{error}}</p>
               
           </div>
          
