--- a/FEproblem1/src/app/app-header/app-header.component.html
+++ b/FEproblem1/src/app/app-header/app-header.component.html
@@ -11,9 +11,9 @@
   <button mat-flat-button class="user-button" routerLink="/">  
   <mat-icon class="user-button__icon" >home</mat-icon>Home</button>
 
-  <button mat-button class="user-button" mat-flat-button >
+  <a class="user-button" mat-flat-button  href="https://www.geektrust.in/" target="_blank" >
   Geektrust Home
-</button>
+</a>
     
       <!--<a mat-flat-button color="primary" href="https://www.geektrust.in/" target="_blank">Geektrust Home</a>-->
   </div>
