--- a/FEproblem1/src/app/page-not-found/page-not-found.component.html
+++ b/FEproblem1/src/app/page-not-found/page-not-found.component.html
@@ -4,10 +4,10 @@
 
     <mat-card class="not-found-page__card">
       <mat-card-content >
-        <h1 class="not-found-page__card-title">404</h1>
+        <h1 class="not-found-page__card-title">{{title}}</h1>
 
-        <p class="not-found-page__card-sub-title">Oops. Looks like the page you're looking for no longer exists</p>
-        <p class="not-found-page__card-sub-title-second">But we're here to bring you back to safety</p>
+        <p class="not-found-page__card-sub-title">{{subTitle}}</p>
+        <p class="not-found-page__card-sub-title-second">{{errorMessage}}</p>
 
         <button class="not-found-page__card-button" mat-raised-button color="primary" routerLink="/">Back to Home</button>
 
