added message on reset

--- a/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
+++ b/FEproblem1/src/app/finding-falcone/falcone-dashboard/falcone-dashboard.component.html
@@ -7,13 +7,13 @@
   <mat-sidenav-content class="layout-content">
     
   <div class="charts-wrapper">
-    <mat-card class="chart">
+    <mat-card class="info">
       <app-planets></app-planets>
     </mat-card>
-    <mat-card class="form">
+    <mat-card class="info">
       <app-search></app-search>
     </mat-card>
-    <mat-card class="chart">
+    <mat-card class="info">
       <app-vehicles></app-vehicles>
     </mat-card>
   </div>
