--- a/FEproblem1/src/app/finding-falcone/result/result.component.html
+++ b/FEproblem1/src/app/finding-falcone/result/result.component.html
@@ -22,7 +22,7 @@
                 Planet:	{{planetName}}
               </p>
                <p>
-    	        Time taken:{{result.timeTaken}}
+    	        Time taken:{{result.timeTaken}} hours
               </p> 
              
           </div>
