--- a/FEproblem1/src/app/finding-falcone/search/search.component.scss
+++ b/FEproblem1/src/app/finding-falcone/search/search.component.scss
@@ -13,7 +13,7 @@
     align-items: center;
     color: $grey;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   &__title {
