vehicle component unit test

--- a/FEproblem1/src/app/finding-falcone/planets/planets.component.html
+++ b/FEproblem1/src/app/finding-falcone/planets/planets.component.html
@@ -1,6 +1,6 @@
 <mat-card class="visits-chart">
   <mat-card-title class="visits-chart__header">
-    <h5 class="visits-chart__title">Potential Hideouts</h5>
+    <h5 class="visits-chart__title">Potential Hideout Destinations</h5>
   </mat-card-title>
 
   <mat-card-content class="visits-chart__content" *ngFor="let planet of planetList|async">
