--- a/FEproblem1/src/app/finding-falcone/vehicles/vehicles.component.html
+++ b/FEproblem1/src/app/finding-falcone/vehicles/vehicles.component.html
@@ -1,4 +1,4 @@
-<mat-card class="visits-chart">
+<mat-card class="visits-chart" id="vehiclesList">
   <mat-card-title class="visits-chart__header">
     <h5 class="visits-chart__title">Available Vehicles</h5>
   </mat-card-title>
@@ -6,9 +6,9 @@
   <mat-card-content class="visits-chart__content" *ngFor="let vehicle of vehiclesList|async">
   
 
- <mat-card class="example-card">
+ <mat-card class="example-card" id="vehicle">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar  class="example-header-image"></div>
     <mat-card-title>{{vehicle.name}}</mat-card-title>
     <mat-card-subtitle>Units: {{vehicle.total_no}} </mat-card-subtitle>
       <mat-card-subtitle>Max Distance: {{vehicle.max_distance}} megamiles</mat-card-subtitle>
